--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
  
     <properties>
         <appengine.app.version>1</appengine.app.version>
-        <appengine.target.version>1.7.6</appengine.target.version>
+        <appengine.target.version>1.7.7</appengine.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
  
@@ -98,7 +98,7 @@
             <plugin>
                 <groupId>com.google.appengine</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
-                <version>1.7.6</version>
+                <version>${appengine.target.version}</version>
                 <configuration>                                     
                     <enableJarClasses>true</enableJarClasses>
                 </configuration>
